스톱워치 만드는 또다른 방법

--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
         <button id="bt_stop">STOP</button>
         <button id="bt_reset">RESET</button>
     </div>
+
+    <!--
+    <h1 class='time'>00:00:00</h1>
+    <button onclick=startWatch()>시작</button>
+    <button onclick=stop()>멈춤</button>
+    <button onclick=clearTime()>초기화</button>
+    -->
+
     <script src="script.js"></script>
+
 </body>
 </html>
