--- a/index.html
+++ b/index.html
@@ -7,15 +7,16 @@
 </head>
 <body>
     <div class="container">
-        <h2>스톱워치</h2>
         <h1>
             <span id="minutes">00</span>:
             <span id="seconds">00</span>:
             <span id="tenMillis">00</span>
         </h1>
-        <button id="bt_start">START</button>
-        <button id="bt_stop">STOP</button>
-        <button id="bt_reset">RESET</button>
+        <div class="button">
+            <button id="bt_start">START</button>
+            <button id="bt_stop">STOP</button>
+            <button id="bt_reset">RESET</button>
+        </div>
     </div>
 
     <!--
